# thermidor

./: Dockerfile
.github/workflows/: auto-response.yml  ci.yml  labeler.yml  ossar.yml
Swabble/: Package.resolved  Package.swift
apps/android/app/: build.gradle.kts
apps/android/app/src/main/java/ai/openclaw/app/gateway/: GatewaySession.kt
apps/android/app/src/main/java/ai/openclaw/app/ui/: MobileUiTokens.kt  OpenClawTheme.kt
apps/ios/Config/: Version.xcconfig
apps/macos/: Package.resolved
apps/macos/Sources/OpenClaw/: HostEnvSecurityPolicy.generated.swift
apps/macos/Sources/OpenClaw/Resources/: Info.plist
apps/windows/: index.html  package.json  tsconfig.json  vite.config.ts
apps/windows/src/: App.css  App.tsx
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/icons/: README.md
apps/windows/src-tauri/src/: lib.rs  main.rs
apps/windows/src/pages/: ChatView.tsx  OnboardingFlow.tsx  SettingsWindow.tsx  StatusDashboard.tsx
extensions/matrix/src/: account-selection.test.ts  account-selection.ts
extensions/matrix/src/matrix/: accounts.test.ts  accounts.ts  client.test.ts
extensions/telegram/src/: approval-native.ts  bot-native-commands.ts  channel.test.ts  channel.ts
src/agents/: pi-embedded-helpers.isbillingerrormessage.test.ts
test/scripts/: test-parallel.test.ts
