[package]
name = "openclaw-desktop"
version = "0.0.1"
description = "OpenClaw Windows Desktop App"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
